# 010424clock24-kondratenko

./: CMakeLists.txt  analogclock.cpp  analogclock.h  analogclock.ui  main.cpp
